# ClinicalMatcher

./: .gitignore  LICENSE  README.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ANNOTATION_PROTOCOL.md  BENCHMARK_DESIGN.md  DATA_INGESTION.md  EVALUATION.md  PROJECT_AUDIT.md  REFERENCES.md  SCHEMA.md  SCHEMA_MIGRATIONS.md
fixtures/synthetic/: clinicaltrials_api_search_response.json  clinicaltrials_api_study.json  clinicaltrials_api_version.json  trial_matching.json
fixtures/synthetic/pilot/: adjudication.json  annotation-a.json  annotation-b.json  manifest.json
legacy/apixaban/: add_criteria_to_eval.py  analyze_ib_results.py  apixaban_processing.py  attach_patient_id_to_eval.py  build_contribution_dataset.py  build_index_mteb_small.py  build_indexes.py  build_rag_index.py  clinical_ib_score.py  embed_gatortron.py  embed_mteb_small.py  embed_nemotron.py  eval_langchain_criteria.py  eval_mteb_self_retrieval.py  eval_mteb_topk_cases.py  eval_plain_criteria.py  eval_plain_llm.py  eval_rag_langchain.py  mi_analysis.py  mi_llm_logits.py  plot_results.py  pre_cands_clinical.py  rag_cli.py  rag_cli_mteb.py  rag_langchain_eval.py  rag_mi_infer.py  rag_simple_mteb.py  test_medcpt_load.py  train_contribution_classifier.py  train_struct_model.py
scripts/: check_public_data.py
src/clinical_matcher/: __init__.py  apixaban_cli.py  capacity.py  capacity_cli.py  cli.py  evaluate_cli.py  evaluation.py  evaluation_runner.py  fixture.py  gold_readiness.py  gold_readiness_cli.py  import_trial_cli.py  models.py  pilot.py  pilot_cli.py  pipeline.py  regenerate_patients_cli.py  reporting.py  semantic_audit.py  semantic_audit_cli.py  snapshot_cli.py  split_check_cli.py  split_cli.py  splits.py  validate_cli.py  validation.py
src/clinical_matcher/ingestion/: __init__.py  apixaban.py  patients.py  snapshots.py  trial_selection.py  trials.py
src/clinical_matcher/schemas/: annotation-capacity-plan-1.0.0.schema.json  apixaban-id-map-1.0.0.schema.json  apixaban-import-manifest-1.0.0.schema.json  apixaban-staging-corpus-1.0.0.schema.json  benchmark-gold-readiness-1.0.0.schema.json  clinicalmatcher-1.0.0.schema.json  patient-regeneration-manifest-1.0.0.schema.json  patient-source-1.0.0.schema.json  pilot-adjudication-1.0.0.schema.json  pilot-annotation-1.0.0.schema.json  pilot-manifest-1.0.0.schema.json  pilot-summary-1.0.0.schema.json  run-report-1.0.0.schema.json  semantic-scan-summary-1.0.0.schema.json  split-manifest-1.0.0.schema.json  trial-import-coverage-1.0.0.schema.json  trial-protocol-1.0.0.schema.json  (+3 more)
tests/: test_apixaban_ingestion.py  test_capacity.py  test_evaluation.py  test_gold_readiness.py  test_patient_ingestion.py  test_pilot.py  test_pipeline.py  test_reporting.py  test_schema.py  test_semantic_audit.py  test_splits.py  test_trial_ingestion.py  test_trial_selection.py  test_trial_snapshot.py
