[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-matcher"
version = "0.1.0"
description = "Compliance-safe research pipeline for explainable patient-to-trial matching"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Charlie-Uni"}]
dependencies = ["jsonschema>=4.23,<5"]

[project.scripts]
clinical-matcher-smoke = "clinical_matcher.cli:main"
clinical-matcher-validate = "clinical_matcher.validate_cli:main"
clinical-matcher-split = "clinical_matcher.split_cli:main"
clinical-matcher-check-split = "clinical_matcher.split_check_cli:main"
clinical-matcher-evaluate = "clinical_matcher.evaluate_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clinical_matcher = ["schemas/*.json"]
