[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-matcher"
version = "0.1.0"
description = "Compliance-safe research pipeline for explainable patient-to-trial matching"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Charlie-Uni"}]
dependencies = ["jsonschema>=4.23,<5"]

[project.scripts]
clinical-matcher-smoke = "clinical_matcher.cli:main"
clinical-matcher-validate = "clinical_matcher.validate_cli:main"
clinical-matcher-split = "clinical_matcher.split_cli:main"
clinical-matcher-check-split = "clinical_matcher.split_check_cli:main"
clinical-matcher-evaluate = "clinical_matcher.evaluate_cli:main"
clinical-matcher-import-trial = "clinical_matcher.import_trial_cli:main"
clinical-matcher-plan-capacity = "clinical_matcher.capacity_cli:main"
clinical-matcher-pilot = "clinical_matcher.pilot_cli:main"
clinical-matcher-snapshot = "clinical_matcher.snapshot_cli:main"
clinical-matcher-gold-readiness = "clinical_matcher.gold_readiness_cli:main"
clinical-matcher-audit-semantic-scan = "clinical_matcher.semantic_audit_cli:main"
clinical-matcher-regenerate-patients = "clinical_matcher.regenerate_patients_cli:main"
clinical-matcher-import-apixaban = "clinical_matcher.apixaban_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clinical_matcher = ["schemas/*.json"]
